examples/Passing/Functions/multi_var.c
int foo (int a, int b) {
    return a + b;
}

int main() {
    return foo(5, 6);
}
