examples/Failing/Functions/wrong_arg.c
int foo (int a) {
    return a;
}

int main() {
    return foo(5, 6);
}
